[package]
name = "ed25519-to-x25519"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
ed25519-dalek = { version = "2.0.0", features = ["rand_core"] }
curve25519-dalek = { version = "4.1.1" }
x25519-dalek = { version = "2.0.0", features = ["static_secrets"] }
sha2 = "0.10.8"
